<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back">

        <android.support.v7.widget.Toolbar
            android:id="@+id/acivity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize">

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="130dp"
            android:layout_marginRight="16dp"

            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bigetron"
                    android:textColor="@color/back"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/from"
                    android:textColor="@color/back"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/From"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="indonesia"
                    android:textColor="@color/back"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/player1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/sniper"
                    android:textColor="@color/back"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Sniper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:text="Jughud"
                    android:textAlignment="center"
                    android:textColor="@color/back"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/Sniper_img"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/player2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/rusher"
                    android:textColor="@color/back"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Rusher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:text="Ryzen"
                    android:textColor="@color/back"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/Rusher_img_img"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp" />


                <TextView
                    android:id="@+id/player3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/observer"
                    android:textColor="@color/back"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/observer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:text="ZUXXY"
                    android:textColor="@color/back"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/observer_img"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/player4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/support"
                    android:textColor="@color/back"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:text="MICROBOY"
                    android:textColor="@color/back"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/Support_img"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/bigetron_logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="78dp"


            />
    </RelativeLayout>

</ScrollView>